# OpenVQE

./: .gitignore  CITATION.cff  CONTRIBUTING.MD  CONTRIBUTING.md  LICENSE  README.md  Untitled-2.ipynb  pyproject.toml  requirements.txt  setup.py  weight _ssvqe.ipynb
doc/: adapt.rst  conf.py  ucc.rst
doc/_build/doctrees/: adapt.doctree  common_files.doctree  environment.pickle  getting_started.doctree  index.doctree  modules.doctree  openvqe.doctree  ucc.doctree
doc/_build/html/: .buildinfo  genindex.html  getting_started.html  index.html  modules.html  objects.inv  openvqe.html  search.html  searchindex.js  ucc.html  ucc_family.html
doc/_build/html/_modules/openvqe/adapt/: qubit_adapt_vqe.html
doc/_build/html/_sources/: common_files.rst.txt  index.rst.txt  modules.rst.txt  openvqe.rst.txt  ucc_family.rst.txt
docs/: getting_started.rst  index.html  index.md  index.rst
docs/_build/doctrees/: adapt.doctree  common_files.doctree  environment.pickle  getting_started.doctree  index.doctree  openvqe.doctree  ucc_family.doctree
docs/_build/html/: adapt.html  common_files.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  ucc_family.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: getting_started.rst.txt
notebooks/: Wssvqe_3rd_exci.ipynb  demo_WSSVQE H4.ipynb  demo_WSSVQE.ipynb  demo_fermionic_adapt.ipynb  demo_puccgsd.ipynb  demo_puccgsd_active_space.ipynb  demo_qubit_adapt.ipynb  demo_quccsd.ipynb  demo_quccsd_active_space.ipynb  demo_ucc.ipynb  demo_ucc_active_space.ipynb
openvqe/: algo.py  main_fermionic_adapt.py  main_qubit_adapt.py  main_quccsd.py  main_quccsd_active_space.py  main_single_double.py  main_triple.py  main_ucc.py  main_ucc_active_space.py  vqe.py
openvqe/Learning_AI/: README.md
openvqe/adapt/: fermionic_adapt_vqe.py  qubit_adapt_vqe.py
openvqe/algorithms/: algorithm.py  fermionic_adapt.py  qubit_adapt.py  quccsd.py  tools.py  ucc.py
openvqe/applications/LAS-USCC/: README.md  environment.yml
openvqe/applications/LAS-USCC/Classical-LAS-USCC/: h4-sto3g.py
openvqe/applications/LAS-USCC/Quantum-LAS-USCC/: .gitignore  custom_UCC.py  custom_excitations.py  feg.py  get_geom.py  get_hamiltonian.py  initialize_las.py  las_vqe.py  requirements.txt  run_las-vqe.py  selected_las_vqe.py  test_qpe.py
openvqe/applications/LAS-USCC/mrh-4-uscc/mrh/: .gitignore  LICENSE  README.md  __init__.py  pyscf-forge_version.txt  pyscf_version.txt
openvqe/applications/LAS-USCC/mrh-4-uscc/mrh/lib/: CMakeLists.txt  fblas.h  fsucc.c  helper.py  sparsedf.c
openvqe/applications/Quantum-batteries/: .gitignore  LICENSE  contextual_subspace.ipynb  requirements.txt
openvqe/applications/Quantum-batteries/logs/: rotoselect.txt
openvqe/applications/algorithms/: README.md
openvqe/applications/pennylane/: QAOA.ipynb
openvqe/applications/qiskit_programs/: README.md  quantum_maxcut.ipynb
openvqe/applications/quantum_batteries/: CS_hams.pickle  Li2FeSiO4.cif  README.md  adapt.py  contextual_subspace.ipynb  cs_vqe.py  mf_chkfile  plot_cs_scaling.py  rotoselect.py  utils.py
openvqe/applications/quantum_batteries/logs/: adapt.txt  cs_vqe.txt
openvqe/bash_files/: main_fermionic_adapt.sh  main_qubit_adapt.sh  main_quccsd.sh  main_quccsd_active_space.sh  main_ucc.sh  main_ucc_active_space.sh
openvqe/common_files/: circuit.py  fermion_util.py  generator_excitations.py  generator_excitations_open_fermion.py  generator_excitations_version0.py  get_energy_WSSVQE.py  molecule_factory.py  molecule_factory_with_sparse.py  qubit_pool.py  sorted_gradient.py
openvqe/hea/: hea.py  main.py
openvqe/ucc_family/: get_energy_qucc.py  get_energy_ucc.py
python/QUCC/: circuit.py  get_energy_ucc.py  main_quccsd.ipynb  main_quccsd.sh  molecule_factory.py
python/QUCC/.ipynb_checkpoints/: main_quccsd-checkpoint.ipynb
python/QUCC_active_space/: main_quccsd_active_space.ipynb  main_quccsd_active_space.sh  molecule_factory.py  qubit_pool.py
python/QUCC_active_space/.ipynb_checkpoints/: main_quccsd_active_space-checkpoint.ipynb
python/UCC/: fermion_util.py  generator_excitations.py  get_energy_ucc.py  main_ucc_family.ipynb  molecule_factory.py  total_cc.sh
python/UCC/.ipynb_checkpoints/: main_ucc_family-checkpoint.ipynb
python/UCC_active_space_selection/: generator_excitations.py  get_energy_ucc.py  main_ucc_active_space.ipynb  main_ucc_active_space.sh  molecule_factory.py
python/UCC_active_space_selection/.ipynb_checkpoints/: main_ucc_active_space-checkpoint.ipynb
python/fermionic_adapt/: .gitignore  fermionic_adaptive.py  main_fermionic_adapt.ipynb  main_fermionic_adapt.sh  molecule_factory_with_sparse.py  sorted_gradient.py
python/fermionic_adapt/.ipynb_checkpoints/: main_fermionic_adapt-checkpoint.ipynb
python/qubit_adapt/: main_qubit_adapt.ipynb  main_qubit_adapt.sh  molecule_factory_with_sparse.py  qubit_adapt.py
python/qubit_adapt/.ipynb_checkpoints/: main_qubit_adapt-checkpoint.ipynb
tests/: test_main_fermionic_adapt.py  test_main_qubit_adapt.py  test_main_quccsd.py  test_main_quccsd_active_space.py  test_main_ucc.py  test_main_ucc_active_space.py  test_my_lib.py
(+300 files in other folders)
