[tool.poetry]
name = "openvqe"
version = "0.1.0"
description = ""
authors = ["cail626 <nathanvaneberg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "3.7.5"
myqlm-clinalg = "0.1.4"
myqlm-contrib = "1.9.5"
myqlm-fermion = "1.1.4"
myqlm-simulators = "1.9.5"
numpy = "1.23.5"
openfermion = "1.6.1"
pennylane = "0.34.0"
pyscf = "2.7.0"
pytest = "7.4.4"
qat-comm = "1.4.7"
qat-core = "1.8.5"
qat-devices = "0.2.4"
qat-lang = "3.0.4"
qat-variational = "1.4.4"
scipy = "1.9.3"
setuptools = "75.3.0"
symmer = "0.0.7"
tangelo-gc = "0.4.3"
cuda-quantum = "0.6.0"
networkx = "3.4.2"
qiskit-ibm-runtime = "0.33.1"
pylatexenc = "2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
